--- a/.github/workflows/test_clt.yml
+++ b/.github/workflows/test_clt.yml
@@ -22,7 +22,6 @@ jobs:
       - name: Annotate
         uses: JetBrains/ReSharper-InspectCode@v0.3
         with:
-          solution: ./ConsoleApp.sln
+          solution: ConsoleApp.sln
           swea: True
           verbosity: INFO
-          tool-version: 2020.3.3
