--- a/.github/workflows/test_clt.yml
+++ b/.github/workflows/test_clt.yml
@@ -26,3 +26,6 @@ jobs:
           swea: True
           verbosity: INFO
           tool-version: 2023.2.0
+
+    permissions:
+      security-events: write
