--- a/.github/workflows/test_clt.yml
+++ b/.github/workflows/test_clt.yml
@@ -23,7 +23,7 @@ jobs:
         uses: JetBrains/ReSharper-InspectCode@v0.3
         with:
           solution: ConsoleApp/ConsoleApp.sln
-          format: Xml
+          output: results.xml
           swea: True
           verbosity: INFO
           tool-version: 2023.2.0
