--- a/.github/workflows/test_clt.yml
+++ b/.github/workflows/test_clt.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.2
         with:
           name: sca report
-          path: ./results.sarif.json
+          path:  /home/runner/work/test_actions/test_actions/results.sarif.json
 
     permissions:
       security-events: write
