--- a/.github/workflows/test_clt.yml
+++ b/.github/workflows/test_clt.yml
@@ -3,8 +3,10 @@ name: Test CLT
 on:
   push:
     branches: [ "main" ]
+  pull_request_target:
+    branches: ['dependabot/**']
   pull_request:
-    branches: [ "main" ]
+    types: [opened, synchronize]
 
 
   workflow_dispatch:
@@ -26,12 +28,6 @@ jobs:
           swea: True
           verbosity: INFO
           tool-version: 2023.2.0
-          
-      - name: Upload Installer
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: sca report
-          path:  /home/runner/work/test_actions/test_actions/results.sarif.json
 
     permissions:
       security-events: write
